antlr_simple_test/src/main/java/t4/FeatureParser.java
// Generated from t4/Feature.g4 by ANTLR 4.9.2
package t4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FeatureParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, DOT=4, LR_BRACKET=5, RR_BRACKET=6, COMMA=7, MULTI_SUM=8, 
		MULTI_MAX=9, MULTI_MIN=10, MULTI_AVG=11, MULTI_UNIQUE_COUNT=12, MULTI_COUNT=13, 
		MULTI_TOP3FREQUENCY=14, MULTI_LAST_VALUE=15, SUBTRACT=16, MULTIPLY=17, 
		DIVIDE=18, ADD=19, LOG=20, REGRESSION_LABEL=21, SPLIT=22, SPLIT_KEY=23, 
		WINDOW_MAX=24, WINDOW_MIN=25, WINDOW_AVG=26, WINDOW_UNIQUE_COUNT=27, WINDOW_COUNT=28, 
		WINDOW_TOP1_RATIO=29, DAY=30, LIMIT=31, SECOND=32, MULTI_DIRECT=33, BINARY_LABEL=34, 
		ORIGINAL=35, TIMEDIFF=36, ISIN=37, COMBINE=38, DAYOFWEEK=39, HOUROFDAY=40, 
		ISWEEKDAY=41, WINDOW_SUM=42, STRING=43;
	public static final int
		RULE_parse = 0, RULE_feature_express = 1, RULE_key = 2, RULE_variable_name = 3, 
		RULE_time_express = 4, RULE_day = 5, RULE_limit = 6, RULE_second = 7, 
		RULE_table_name = 8, RULE_field_name = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "feature_express", "key", "variable_name", "time_express", "day", 
			"limit", "second", "table_name", "field_name"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'d:'", "':'", "'s'", "'.'", "'('", "')'", "','", "'multi_sum'", 
			"'multi_max'", "'multi_min'", "'multi_avg'", "'multi_unique_count'", 
			"'multi_count'", "'multi_top3frequency'", "'multi_last_value'", "'subtract'", 
			"'multiply'", "'divide'", "'add'", "'log'", "'regression_label'", "'split'", 
			"'split_key'", "'window_max'", "'window_min'", "'window_avg'", "'window_unique_count'", 
			"'window_count'", "'window_top1_ratio'", null, null, null, "'multi_direct'", 
			"'binary_label'", "'original'", "'timediff'", "'isin'", "'combine'", 
			"'dayofweek'", "'hourofday'", "'isweekday'", "'window_sum'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "DOT", "LR_BRACKET", "RR_BRACKET", "COMMA", "MULTI_SUM", 
			"MULTI_MAX", "MULTI_MIN", "MULTI_AVG", "MULTI_UNIQUE_COUNT", "MULTI_COUNT", 
			"MULTI_TOP3FREQUENCY", "MULTI_LAST_VALUE", "SUBTRACT", "MULTIPLY", "DIVIDE", 
			"ADD", "LOG", "REGRESSION_LABEL", "SPLIT", "SPLIT_KEY", "WINDOW_MAX", 
			"WINDOW_MIN", "WINDOW_AVG", "WINDOW_UNIQUE_COUNT", "WINDOW_COUNT", "WINDOW_TOP1_RATIO", 
			"DAY", "LIMIT", "SECOND", "MULTI_DIRECT", "BINARY_LABEL", "ORIGINAL", 
			"TIMEDIFF", "ISIN", "COMBINE", "DAYOFWEEK", "HOUROFDAY", "ISWEEKDAY", 
			"WINDOW_SUM", "STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Feature.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FeatureParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public Feature_expressContext feature_express() {
			return getRuleContext(Feature_expressContext.class,0);
		}
		public TerminalNode EOF() { return getToken(FeatureParser.EOF, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).exitParse(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(20);
			feature_express();
			setState(21);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Feature_expressContext extends ParserRuleContext {
		public KeyContext key() {
			return getRuleContext(KeyContext.class,0);
		}
		public List<TerminalNode> LR_BRACKET() { return getTokens(FeatureParser.LR_BRACKET); }
		public TerminalNode LR_BRACKET(int i) {
			return getToken(FeatureParser.LR_BRACKET, i);
		}
		public List<TerminalNode> RR_BRACKET() { return getTokens(FeatureParser.RR_BRACKET); }
		public TerminalNode RR_BRACKET(int i) {
			return getToken(FeatureParser.RR_BRACKET, i);
		}
		public List<Variable_nameContext> variable_name() {
			return getRuleContexts(Variable_nameContext.class);
		}
		public Variable_nameContext variable_name(int i) {
			return getRuleContext(Variable_nameContext.class,i);
		}
		public List<Feature_expressContext> feature_express() {
			return getRuleContexts(Feature_expressContext.class);
		}
		public Feature_expressContext feature_express(int i) {
			return getRuleContext(Feature_expressContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(FeatureParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FeatureParser.COMMA, i);
		}
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public Time_expressContext time_express() {
			return getRuleContext(Time_expressContext.class,0);
		}
		public Feature_expressContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_feature_express; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).enterFeature_express(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).exitFeature_express(this);
		}
	}

	public final Feature_expressContext feature_express() throws RecognitionException {
		Feature_expressContext _localctx = new Feature_expressContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_feature_express);
		int _la;
		try {
			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(23);
				key();
				setState(24);
				match(LR_BRACKET);
				setState(27);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case STRING:
					{
					setState(25);
					variable_name();
					}
					break;
				case LR_BRACKET:
				case MULTI_SUM:
				case MULTI_MAX:
				case MULTI_MIN:
				case MULTI_AVG:
				case MULTI_UNIQUE_COUNT:
				case MULTI_COUNT:
				case MULTI_TOP3FREQUENCY:
				case MULTI_LAST_VALUE:
				case SUBTRACT:
				case MULTIPLY:
				case DIVIDE:
				case ADD:
				case REGRESSION_LABEL:
				case SPLIT:
				case SPLIT_KEY:
				case WINDOW_MAX:
				case WINDOW_MIN:
				case WINDOW_AVG:
				case WINDOW_UNIQUE_COUNT:
				case WINDOW_COUNT:
				case WINDOW_TOP1_RATIO:
				case MULTI_DIRECT:
				case BINARY_LABEL:
				case ORIGINAL:
				case TIMEDIFF:
				case ISIN:
				case COMBINE:
				case DAYOFWEEK:
				case HOUROFDAY:
				case ISWEEKDAY:
				case WINDOW_SUM:
					{
					setState(26);
					feature_express();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(29);
					match(COMMA);
					setState(32);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case STRING:
						{
						setState(30);
						variable_name();
						}
						break;
					case LR_BRACKET:
					case MULTI_SUM:
					case MULTI_MAX:
					case MULTI_MIN:
					case MULTI_AVG:
					case MULTI_UNIQUE_COUNT:
					case MULTI_COUNT:
					case MULTI_TOP3FREQUENCY:
					case MULTI_LAST_VALUE:
					case SUBTRACT:
					case MULTIPLY:
					case DIVIDE:
					case ADD:
					case REGRESSION_LABEL:
					case SPLIT:
					case SPLIT_KEY:
					case WINDOW_MAX:
					case WINDOW_MIN:
					case WINDOW_AVG:
					case WINDOW_UNIQUE_COUNT:
					case WINDOW_COUNT:
					case WINDOW_TOP1_RATIO:
					case MULTI_DIRECT:
					case BINARY_LABEL:
					case ORIGINAL:
					case TIMEDIFF:
					case ISIN:
					case COMBINE:
					case DAYOFWEEK:
					case HOUROFDAY:
					case ISWEEKDAY:
					case WINDOW_SUM:
						{
						setState(31);
						feature_express();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					}
					setState(38);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(39);
				match(RR_BRACKET);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(41);
				match(LR_BRACKET);
				setState(44);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case STRING:
					{
					setState(42);
					variable_name();
					}
					break;
				case LR_BRACKET:
				case MULTI_SUM:
				case MULTI_MAX:
				case MULTI_MIN:
				case MULTI_AVG:
				case MULTI_UNIQUE_COUNT:
				case MULTI_COUNT:
				case MULTI_TOP3FREQUENCY:
				case MULTI_LAST_VALUE:
				case SUBTRACT:
				case MULTIPLY:
				case DIVIDE:
				case ADD:
				case REGRESSION_LABEL:
				case SPLIT:
				case SPLIT_KEY:
				case WINDOW_MAX:
				case WINDOW_MIN:
				case WINDOW_AVG:
				case WINDOW_UNIQUE_COUNT:
				case WINDOW_COUNT:
				case WINDOW_TOP1_RATIO:
				case MULTI_DIRECT:
				case BINARY_LABEL:
				case ORIGINAL:
				case TIMEDIFF:
				case ISIN:
				case COMBINE:
				case DAYOFWEEK:
				case HOUROFDAY:
				case ISWEEKDAY:
				case WINDOW_SUM:
					{
					setState(43);
					feature_express();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(46);
				match(RR_BRACKET);
				setState(47);
				key();
				setState(48);
				match(LR_BRACKET);
				setState(51);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case STRING:
					{
					setState(49);
					variable_name();
					}
					break;
				case LR_BRACKET:
				case MULTI_SUM:
				case MULTI_MAX:
				case MULTI_MIN:
				case MULTI_AVG:
				case MULTI_UNIQUE_COUNT:
				case MULTI_COUNT:
				case MULTI_TOP3FREQUENCY:
				case MULTI_LAST_VALUE:
				case SUBTRACT:
				case MULTIPLY:
				case DIVIDE:
				case ADD:
				case REGRESSION_LABEL:
				case SPLIT:
				case SPLIT_KEY:
				case WINDOW_MAX:
				case WINDOW_MIN:
				case WINDOW_AVG:
				case WINDOW_UNIQUE_COUNT:
				case WINDOW_COUNT:
				case WINDOW_TOP1_RATIO:
				case MULTI_DIRECT:
				case BINARY_LABEL:
				case ORIGINAL:
				case TIMEDIFF:
				case ISIN:
				case COMBINE:
				case DAYOFWEEK:
				case HOUROFDAY:
				case ISWEEKDAY:
				case WINDOW_SUM:
					{
					setState(50);
					feature_express();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(53);
				match(RR_BRACKET);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(55);
				key();
				setState(56);
				match(LR_BRACKET);
				setState(57);
				table_name();
				setState(58);
				match(COMMA);
				setState(59);
				variable_name();
				setState(60);
				match(RR_BRACKET);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(62);
				key();
				setState(63);
				match(LR_BRACKET);
				{
				setState(64);
				variable_name();
				}
				setState(65);
				match(COMMA);
				{
				setState(66);
				variable_name();
				}
				setState(67);
				match(COMMA);
				setState(68);
				time_express();
				setState(69);
				match(COMMA);
				{
				setState(70);
				variable_name();
				}
				setState(71);
				match(RR_BRACKET);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(73);
				key();
				setState(74);
				match(LR_BRACKET);
				setState(75);
				table_name();
				setState(76);
				match(COMMA);
				setState(77);
				variable_name();
				setState(78);
				match(COMMA);
				setState(79);
				time_express();
				setState(80);
				match(RR_BRACKET);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KeyContext extends ParserRuleContext {
		public TerminalNode ORIGINAL() { return getToken(FeatureParser.ORIGINAL, 0); }
		public TerminalNode BINARY_LABEL() { return getToken(FeatureParser.BINARY_LABEL, 0); }
		public TerminalNode REGRESSION_LABEL() { return getToken(FeatureParser.REGRESSION_LABEL, 0); }
		public TerminalNode SPLIT() { return getToken(FeatureParser.SPLIT, 0); }
		public TerminalNode SPLIT_KEY() { return getToken(FeatureParser.SPLIT_KEY, 0); }
		public TerminalNode WINDOW_SUM() { return getToken(FeatureParser.WINDOW_SUM, 0); }
		public TerminalNode WINDOW_MAX() { return getToken(FeatureParser.WINDOW_MAX, 0); }
		public TerminalNode WINDOW_MIN() { return getToken(FeatureParser.WINDOW_MIN, 0); }
		public TerminalNode WINDOW_AVG() { return getToken(FeatureParser.WINDOW_AVG, 0); }
		public TerminalNode WINDOW_UNIQUE_COUNT() { return getToken(FeatureParser.WINDOW_UNIQUE_COUNT, 0); }
		public TerminalNode WINDOW_COUNT() { return getToken(FeatureParser.WINDOW_COUNT, 0); }
		public TerminalNode WINDOW_TOP1_RATIO() { return getToken(FeatureParser.WINDOW_TOP1_RATIO, 0); }
		public TerminalNode MULTI_DIRECT() { return getToken(FeatureParser.MULTI_DIRECT, 0); }
		public TerminalNode ISIN() { return getToken(FeatureParser.ISIN, 0); }
		public TerminalNode COMBINE() { return getToken(FeatureParser.COMBINE, 0); }
		public TerminalNode TIMEDIFF() { return getToken(FeatureParser.TIMEDIFF, 0); }
		public TerminalNode LOG() { return getToken(FeatureParser.LOG, 0); }
		public TerminalNode DAYOFWEEK() { return getToken(FeatureParser.DAYOFWEEK, 0); }
		public TerminalNode ISWEEKDAY() { return getToken(FeatureParser.ISWEEKDAY, 0); }
		public TerminalNode HOUROFDAY() { return getToken(FeatureParser.HOUROFDAY, 0); }
		public TerminalNode ADD() { return getToken(FeatureParser.ADD, 0); }
		public TerminalNode DIVIDE() { return getToken(FeatureParser.DIVIDE, 0); }
		public TerminalNode MULTIPLY() { return getToken(FeatureParser.MULTIPLY, 0); }
		public TerminalNode SUBTRACT() { return getToken(FeatureParser.SUBTRACT, 0); }
		public TerminalNode MULTI_SUM() { return getToken(FeatureParser.MULTI_SUM, 0); }
		public TerminalNode MULTI_MAX() { return getToken(FeatureParser.MULTI_MAX, 0); }
		public TerminalNode MULTI_MIN() { return getToken(FeatureParser.MULTI_MIN, 0); }
		public TerminalNode MULTI_AVG() { return getToken(FeatureParser.MULTI_AVG, 0); }
		public TerminalNode MULTI_UNIQUE_COUNT() { return getToken(FeatureParser.MULTI_UNIQUE_COUNT, 0); }
		public TerminalNode MULTI_COUNT() { return getToken(FeatureParser.MULTI_COUNT, 0); }
		public TerminalNode MULTI_TOP3FREQUENCY() { return getToken(FeatureParser.MULTI_TOP3FREQUENCY, 0); }
		public TerminalNode MULTI_LAST_VALUE() { return getToken(FeatureParser.MULTI_LAST_VALUE, 0); }
		public KeyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_key; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).enterKey(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).exitKey(this);
		}
	}

	public final KeyContext key() throws RecognitionException {
		KeyContext _localctx = new KeyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_key);
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ORIGINAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				match(ORIGINAL);
				}
				break;
			case BINARY_LABEL:
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				match(BINARY_LABEL);
				}
				break;
			case REGRESSION_LABEL:
				enterOuterAlt(_localctx, 3);
				{
				setState(86);
				match(REGRESSION_LABEL);
				}
				break;
			case SPLIT:
				enterOuterAlt(_localctx, 4);
				{
				setState(87);
				match(SPLIT);
				}
				break;
			case SPLIT_KEY:
				enterOuterAlt(_localctx, 5);
				{
				setState(88);
				match(SPLIT_KEY);
				}
				break;
			case WINDOW_SUM:
				enterOuterAlt(_localctx, 6);
				{
				setState(89);
				match(WINDOW_SUM);
				}
				break;
			case WINDOW_MAX:
				enterOuterAlt(_localctx, 7);
				{
				setState(90);
				match(WINDOW_MAX);
				}
				break;
			case WINDOW_MIN:
				enterOuterAlt(_localctx, 8);
				{
				setState(91);
				match(WINDOW_MIN);
				}
				break;
			case WINDOW_AVG:
				enterOuterAlt(_localctx, 9);
				{
				setState(92);
				match(WINDOW_AVG);
				}
				break;
			case WINDOW_UNIQUE_COUNT:
				enterOuterAlt(_localctx, 10);
				{
				setState(93);
				match(WINDOW_UNIQUE_COUNT);
				}
				break;
			case WINDOW_COUNT:
				enterOuterAlt(_localctx, 11);
				{
				setState(94);
				match(WINDOW_COUNT);
				}
				break;
			case WINDOW_TOP1_RATIO:
				enterOuterAlt(_localctx, 12);
				{
				setState(95);
				match(WINDOW_TOP1_RATIO);
				}
				break;
			case MULTI_DIRECT:
				enterOuterAlt(_localctx, 13);
				{
				setState(96);
				match(MULTI_DIRECT);
				}
				break;
			case ISIN:
				enterOuterAlt(_localctx, 14);
				{
				setState(97);
				match(ISIN);
				}
				break;
			case COMBINE:
				enterOuterAlt(_localctx, 15);
				{
				setState(98);
				match(COMBINE);
				}
				break;
			case TIMEDIFF:
				enterOuterAlt(_localctx, 16);
				{
				setState(99);
				match(TIMEDIFF);
				setState(100);
				match(LOG);
				}
				break;
			case DAYOFWEEK:
				enterOuterAlt(_localctx, 17);
				{
				setState(101);
				match(DAYOFWEEK);
				}
				break;
			case ISWEEKDAY:
				enterOuterAlt(_localctx, 18);
				{
				setState(102);
				match(ISWEEKDAY);
				}
				break;
			case HOUROFDAY:
				enterOuterAlt(_localctx, 19);
				{
				setState(103);
				match(HOUROFDAY);
				}
				break;
			case ADD:
				enterOuterAlt(_localctx, 20);
				{
				setState(104);
				match(ADD);
				}
				break;
			case DIVIDE:
				enterOuterAlt(_localctx, 21);
				{
				setState(105);
				match(DIVIDE);
				}
				break;
			case MULTIPLY:
				enterOuterAlt(_localctx, 22);
				{
				setState(106);
				match(MULTIPLY);
				}
				break;
			case SUBTRACT:
				enterOuterAlt(_localctx, 23);
				{
				setState(107);
				match(SUBTRACT);
				}
				break;
			case MULTI_SUM:
				enterOuterAlt(_localctx, 24);
				{
				setState(108);
				match(MULTI_SUM);
				}
				break;
			case MULTI_MAX:
				enterOuterAlt(_localctx, 25);
				{
				setState(109);
				match(MULTI_MAX);
				}
				break;
			case MULTI_MIN:
				enterOuterAlt(_localctx, 26);
				{
				setState(110);
				match(MULTI_MIN);
				}
				break;
			case MULTI_AVG:
				enterOuterAlt(_localctx, 27);
				{
				setState(111);
				match(MULTI_AVG);
				}
				break;
			case MULTI_UNIQUE_COUNT:
				enterOuterAlt(_localctx, 28);
				{
				setState(112);
				match(MULTI_UNIQUE_COUNT);
				}
				break;
			case MULTI_COUNT:
				enterOuterAlt(_localctx, 29);
				{
				setState(113);
				match(MULTI_COUNT);
				}
				break;
			case MULTI_TOP3FREQUENCY:
				enterOuterAlt(_localctx, 30);
				{
				setState(114);
				match(MULTI_TOP3FREQUENCY);
				}
				break;
			case MULTI_LAST_VALUE:
				enterOuterAlt(_localctx, 31);
				{
				setState(115);
				match(MULTI_LAST_VALUE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_nameContext extends ParserRuleContext {
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public TerminalNode DOT() { return getToken(FeatureParser.DOT, 0); }
		public Field_nameContext field_name() {
			return getRuleContext(Field_nameContext.class,0);
		}
		public Variable_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).enterVariable_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).exitVariable_name(this);
		}
	}

	public final Variable_nameContext variable_name() throws RecognitionException {
		Variable_nameContext _localctx = new Variable_nameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variable_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			table_name();
			setState(119);
			match(DOT);
			setState(120);
			field_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Time_expressContext extends ParserRuleContext {
		public DayContext day() {
			return getRuleContext(DayContext.class,0);
		}
		public LimitContext limit() {
			return getRuleContext(LimitContext.class,0);
		}
		public SecondContext second() {
			return getRuleContext(SecondContext.class,0);
		}
		public Time_expressContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_time_express; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).enterTime_express(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).exitTime_express(this);
		}
	}

	public final Time_expressContext time_express() throws RecognitionException {
		Time_expressContext _localctx = new Time_expressContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_time_express);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			day();
			setState(123);
			match(T__0);
			setState(124);
			limit();
			setState(125);
			match(T__1);
			setState(126);
			second();
			setState(127);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DayContext extends ParserRuleContext {
		public TerminalNode DAY() { return getToken(FeatureParser.DAY, 0); }
		public DayContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_day; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).enterDay(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).exitDay(this);
		}
	}

	public final DayContext day() throws RecognitionException {
		DayContext _localctx = new DayContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_day);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(DAY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LimitContext extends ParserRuleContext {
		public TerminalNode LIMIT() { return getToken(FeatureParser.LIMIT, 0); }
		public LimitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_limit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).enterLimit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).exitLimit(this);
		}
	}

	public final LimitContext limit() throws RecognitionException {
		LimitContext _localctx = new LimitContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_limit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(LIMIT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SecondContext extends ParserRuleContext {
		public TerminalNode SECOND() { return getToken(FeatureParser.SECOND, 0); }
		public SecondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_second; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).enterSecond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FeatureListener ) ((FeatureListener)listener).exitSecond(this);
		}
	}

	public final SecondContext second() throws RecognitionException {
		SecondContext _localctx = new SecondContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_second);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(SECOND);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
